--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@antv/larkmap": "^1.3.7",
     "@juggle/resize-observer": "^3.4.0",
     "@umijs/max": "^4.0.68",
+    "ahooks": "^3.7.7",
     "antd": "^5.4.0",
     "classnames": "^2.3.2",
     "echarts": "^5.4.2",
