--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "antd": "^5.4.0",
     "classnames": "^2.3.2",
     "echarts": "^5.4.2",
+    "lodash-es": "^4.17.21",
     "numeral": "^2.0.6"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "husky": "^8.0.3",
